# cppdataframework

./: CMakeLists.txt  README.md
libs/gtest/: CMakeLists.txt
libs/jsoncpp/: CMakeLists.txt
src/: CMakeLists.txt  data.h  datajson.h
tests/: CMakeLists.txt  tests.cpp
